--- a/package.json
+++ b/package.json
@@ -10,23 +10,32 @@
     "android": "react-native run-android"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "16.8.6",
     "react-native": "0.60.4",
+    "react-native-elements": "^1.1.0",
     "react-native-fbsdk": "git+https://github.com/facebook/react-native-fbsdk.git",
     "react-native-firebase": "^5.5.6",
-    "react-native-google-signin": "^2.0.0"
+    "react-native-gesture-handler": "^1.1.0",
+    "react-native-google-signin": "^2.0.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^3.11.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-persist": "^5.10.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
     "@babel/runtime": "7.5.5",
     "@react-native-community/eslint-config": "0.0.3",
     "babel-jest": "24.8.0",
-    "eslint": "6.1.0",
+    "eslint": "5.16.0",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": [ "./node_modules/react-native-gesture-handler/jestSetup.js" ]
   }
 }
