--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "jest": {
     "preset": "react-native",
-    "setupFiles": [ "./node_modules/react-native-gesture-handler/jestSetup.js" ]
+    "setupFiles": [
+      "./node_modules/react-native-gesture-handler/jestSetup.js"
+    ]
   }
 }
