--- a/ios/fasting_app/Info.plist
+++ b/ios/fasting_app/Info.plist
@@ -107,11 +107,11 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
-		<string>Interstate Bold.ttf</string>
-		<string>Interstate Light.ttf</string>
-		<string>Interstate Regular.ttf</string>
 		<string>Montserrat-Medium.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
+		<string>Interstate-Bold.ttf</string>
+		<string>Interstate-Light.ttf</string>
+		<string>Interstate-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
