--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^1.1.0",
     "react-native-google-signin": "^2.0.0",
     "react-native-progress": "^3.6.0",
+    "react-native-snap-carousel": "^3.8.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
