--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,6 +189,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-svg')
     implementation project(':react-native-fbsdk')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-google-signin')
