--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "react": "16.8.6",
     "react-native": "0.60.4",
+    "react-native-circular-progress": "^1.3.0",
     "react-native-elements": "^1.1.0",
     "react-native-fbsdk": "git+https://github.com/facebook/react-native-fbsdk.git",
     "react-native-firebase": "^5.5.6",
@@ -21,6 +22,7 @@
     "react-native-google-signin": "^2.0.0",
     "react-native-progress": "^3.6.0",
     "react-native-snap-carousel": "^3.8.0",
+    "react-native-svg": "^9.6.2",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
