--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "lint": "eslint .",
     "ios": "react-native run-ios --simulator=\"iPhone XR\"",
-    "android": "react-native run-android"
+    "android": "react-native run-android",
+    "buildAndroid": "cd android/; ./gradlew assembleRelease; cd app/build/outputs/apk/release/; cp app-release.apk ~/Documents/.; cd -; cd ..;"
   },
   "dependencies": {
     "axios": "^0.19.0",
